# myCat

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE.txt  README.md  README_CN.md  README_ID.md  docker-compose.mac.yml  docker-compose.windows.yml  docker-compose.yml  main.py  mycat.spec  pyproject.toml  requirements.txt  run.bat  run.sh  run_windows.bat  run_windows.py  start.sh
.github/: FUNDING.yml  pull-request.yml
.github/workflows/: auto-assign.yml  build-appimage.yml  build-deb.yml  ci.yml  publish.yml  release-binaries.yml
demo/: README.md  eye_cat_demo.py  live_cat_demo.py
docs/: ACTIVITY.md  CHARACTERS.md  CHARS.md  CODE_REVIEW.md  IMPROVEMENTS.md  README_CN.md  README_ID.md  README_RU.md  char-pack-format.md  readmeCN.md  readmeID.md  skin-pack-format.md
mycat/: PROMPT.j2  PROMPT_dog.j2  __init__.py  __main__.py  activity.py  activity_store.py  activity_ui.py  ai_backends.py  ai_char.py  ai_char_ui.py  announcer.py  autostart.py  calendar_ics.py  calendar_ui.py  char_catalog.py  char_pack.py  config_store.py  digest.py  focus.py  focus_ui.py  github_api.py  github_notify.py  github_ui.py  key_heatmap.py  key_heatmap_ui.py  llm.py  llm_ollama.py  llm_openai.py  llm_openai_compat.py  llm_prompt.py  llm_settings_ui.py  llm_ui.py  llm_vendors.py  main.py  paths.py  personas.py  pet_needs.py  reminder.py  reminder_ui.py  secret_store.py  (+10 more)
packaging/: control.in  mycat.desktop
scripts/: make_demo_gif.py
tests/: conftest.py  test_activity.py  test_activity_dialog.py  test_activity_store.py  test_ai_backends.py  test_ai_char.py  test_ai_char_ui.py  test_announcer.py  test_auto_focus.py  test_autostart.py  test_calendar_ics.py  test_char_engine.py  test_desktop_entry.py  test_digest.py  test_emoji_font.py  test_focus.py  test_github_notify.py  test_github_ui.py  test_key_heatmap.py  test_llm_ollama.py  test_llm_openai_compat.py  test_llm_prompt.py  test_llm_settings_dialog.py  test_llm_vendors.py  test_ollama_settings_dialog.py  test_persistence.py  test_reminder.py  test_secret_store.py  test_skin_catalog.py  test_startup_indicator.py  test_update_check.py  test_updater.py  test_window_behavior.py
