[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycat"
version = "0.1.5"
description = "Desktop Cat: Qt Overlay"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yumiaura" }]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "pillow>=12.0.0",
    "pyside6>=6.10.0",
]

# Optional local voice chat (speech-to-text + text-to-speech). Needs system
# audio tools too: PipeWire (pw-play/pw-record), PulseAudio (paplay/parecord),
# or ALSA (aplay/arecord). Install with:  pip install "mycat[voice]"
[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.3",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

# Console script `mycat` → calls mycat.main:main
[project.scripts]
mycat = "mycat.main:main"

[tool.setuptools.packages.find]
include = ["mycat*"]

# Include packaged images and prompt templates inside the wheel
[tool.setuptools.package-data]
mycat = ["images/*", "*.j2"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md", "docs/*"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
