[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycat"
version = "0.1.6"
description = "Desktop Cat: Qt Overlay"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yumiaura" }]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "pillow>=12.0.0",
    "pyside6>=6.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Console script `mycat` → calls mycat.main:main
[project.scripts]
mycat = "mycat.main:main"

[tool.setuptools.packages.find]
include = ["mycat*"]

# Bundle non-Python data inside the wheel: skin zips, the plane sprite and the
# prompt template.
[tool.setuptools.package-data]
mycat = ["images/*", "assets/*", "assets/planes/*", "*.j2"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md", "docs/*"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
