[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycat"
version = "0.1.26"
description = "Desktop Cat: Qt Overlay"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yumiaura" }]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "pillow>=12.0.0",
    "pyside6>=6.10.0",
    # Global key/click COUNTS (the key identity is discarded in the hook — only
    # an integer survives), so the counts work out of the box on a plain
    # `pip install mycat` everywhere, including the prebuilt exe.
    #   - Windows/macOS: pynput (installs cleanly there).
    #   - Linux: python-xlib, a pure-Python X11 backend with wheels. We avoid
    #     pynput on Linux because it hard-requires `evdev`, a C extension with no
    #     wheel that would make `pip install mycat` fail to build without a
    #     compiler. Off X11 (Wayland) it degrades to cursor-only.
    "pynput>=1.7; sys_platform != 'linux'",
    "python-xlib>=0.33; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.0",
]

# Optional: store API keys in the OS keyring instead of plaintext config.
[project.optional-dependencies]
secure = ["keyring>=24"]
# ICS calendar reminders: RRULE expansion (the daily standup) is a swamp not
# worth hand-rolling, so the calendar feature needs these two small libs.
calendar = ["icalendar>=6", "recurring-ical-events>=3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Console script `mycat` → calls mycat.main:main
[project.scripts]
mycat = "mycat.main:main"

[tool.setuptools.packages.find]
include = ["mycat*"]

# Bundle non-Python data inside the wheel: char zips, the plane sprite and the
# prompt template.
[tool.setuptools.package-data]
mycat = ["chars/*", "chars/*/*", "assets/*", "assets/planes/*", "assets/fonts/*", "*.j2"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md", "docs/*"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
